cert-manager/middleware-redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: cert-manager
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
