cert-manager/gateway-certmanager.yaml
apiVersion: gateway.networking.k8s.io/v1

kind: Gateway

metadata:
  name: cert-manager-gateway
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer

spec:
  gatewayClassName: traefik

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute

    # - name: podinfo-https
    #   port: 443
    #   protocol: HTTPS
    #   hostname: podinfo.3756home.org
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #     kinds:
    #       - kind: HTTPRoute
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: podinfo-https


    # - name: stocks
    #   hostname: stocks.3756home.org
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: stocks-3756home

    # - name: blog
    #   hostname: blog.3756home.org
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: blog-3756home
