cert-manager/gateway-httponly.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-only-gateway
  namespace: cert-manager
spec:
  
  gatewayClassName: cilium

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
