cert-manager/talos-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: gateway-clusterissuer
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    
    allowedRoutes:
        namespaces:
          from: All
